<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <Button
        android:id="@+id/audioBtnPause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/survey_pause" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survey_press"
        android:textAlignment="center"
        android:textSize="14sp" />

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/audioPhotoview"
        tools:layout_width="match_parent"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/finger" />

    <Button
        android:id="@+id/audioBtnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/survey_play" />

</LinearLayout>